# localization_in_auto_driving

./: .gitignore  README.md
kitti_test/: display_bag.rviz  (+1 more)
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/Log/: front_end_node.ERROR
lidar_localization/cmake/: PCL.cmake  YAML.cmake  eigen.cmake  g2o.cmake  geographic.cmake  global_defination.cmake  glog.cmake
lidar_localization/config/back_end/: config.yaml
lidar_localization/config/front_end/: config.yaml
lidar_localization/config/mapping/: back_end.yaml  front_end.yaml  loop_closing.yaml  viewer.yaml
lidar_localization/config/matching/: matching.yaml
lidar_localization/include/lidar_localization/data_pretreat/: data_pretreat_flow.hpp
lidar_localization/include/lidar_localization/front_end/: front_end.hpp  front_end_flow.hpp
lidar_localization/include/lidar_localization/global_defination/: global_defination.h.in
lidar_localization/include/lidar_localization/matching/: matching.hpp  matching_flow.hpp
lidar_localization/include/lidar_localization/publisher/: cloud_publisher.hpp  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  loop_pose_publisher.hpp  odometry_publisher.hpp  tf_broadcaster.hpp
lidar_localization/include/lidar_localization/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  key_frame.hpp  loop_pose.hpp  pose_data.hpp  velocity_data.hpp
lidar_localization/include/lidar_localization/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  key_frame_subscriber.hpp  key_frames_subscriber.hpp  loop_pose_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
lidar_localization/include/lidar_localization/tf_listener/: tf_listener.hpp
lidar_localization/include/lidar_localization/tools/: file_manager.hpp  print_info.hpp  tic_toc.hpp
lidar_localization/launch/: front_end.launch  mapping.launch  mapping_with_aloam.launch  matching.launch  test_frame.launch
lidar_localization/rviz/: front_end.rviz  mapping.rviz  matching.rviz  test_frame.rviz
lidar_localization/src/: front_end_node.cpp  test_frame_node.cpp
lidar_localization/src/apps/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  loop_closing_node.cpp  matching_node.cpp  test_frame_node.cpp  viewer_node.cpp
lidar_localization/src/data_pretreat/: data_pretreat_flow.cpp
lidar_localization/src/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/mapping/back_end/: back_end.cpp  back_end_flow.cpp
lidar_localization/src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
lidar_localization/src/mapping/loop_closing/: loop_closing.cpp  loop_closing_flow.cpp
lidar_localization/src/mapping/viewer/: viewer.cpp  viewer_flow.cpp
lidar_localization/src/matching/: matching.cpp  matching_flow.cpp
lidar_localization/src/models/cloud_filter/: box_filter.cpp  no_filter.cpp  voxel_filter.cpp
lidar_localization/src/models/graph_optimizer/: interface_graph_optimizer.cpp
lidar_localization/src/models/registration/: ndt_registration.cpp
lidar_localization/src/models/scan_adjust/: distortion_adjust.cpp
lidar_localization/src/publisher/: cloud_publisher.cpp  key_frame_publisher.cpp  key_frames_publisher.cpp  loop_pose_publisher.cpp  odometry_publisher.cpp  tf_broadcaster.cpp
lidar_localization/src/sensor_data/: gnss_data.cpp  imu_data.cpp  key_frame.cpp  loop_pose.cpp  pose_data.cpp  velocity_data.cpp
lidar_localization/src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  key_frame_subscriber.cpp  key_frames_subscriber.cpp  loop_pose_subscriber.cpp  odometry_subscriber.cpp  velocity_subscriber.cpp
lidar_localization/src/tf_listener/: tf_lisener.cpp
lidar_localization/src/tools/: file_manager.cpp  print_info.cpp
lidar_localization/srv/: optimizeMap.srv
(+21 files in other folders)
